--- a/home.html
+++ b/home.html
@@ -357,7 +357,7 @@
 		<main class="page">
 			<section class="hero section-margin-bottom">
 				<div class="hero__video overflow-hidden rounded-[1.25rem]">
-					<video class="w-full " autoplay="" muted="" loop="" id="myVideo">
+					<video class="w-full " autoplay="" muted="" loop="" playsinline id="myVideo">
 						<source src="https://foodexhub.com.ua/assets/video/compress-2.mp4" type="video/mp4">
 					</video>
 					<button type="button" class="hero__video-action">
