--- a/home.html
+++ b/home.html
@@ -2144,7 +2144,7 @@
 
 										</div>
 										<div class="form__line">
-											<div class="description text-black/65 text-center">
+											<div class="description text-black/65 sm:text-center">
 												*Ми не передаємо Ваші дані третім особам, а використовуємо їх лише для забезпечення належного зв’язку з Вами.
 											</div>
 										</div>
