--- a/home.html
+++ b/home.html
@@ -2116,7 +2116,7 @@
 											<div class="form__col w-full">
 												<!-- data-language="ru" |||||| data-language="en" -->
 												<div class="form__col-wrap form-line-input">
-													<input autocomplete="off" type="tel" name="phone" data-error="Запишіть або перевірьте ведений номер!" data-error-short="Мало" data-error-long="Багато" data-validate data-required required id="phone" placeholder="" data-language="ru" class="input input-phone w-full">
+													<input autocomplete="off" type="tel" name="phone" data-error="Перевірте правильність номеру" data-error-short="Мало" data-error-long="Багато" data-validate data-required required id="phone" placeholder="" data-language="ru" class="input input-phone w-full">
 													<label for="phone" class="form__label form__label--required">+380 50 123 45 67</label>
 												</div>
 											</div>
