--- a/home.html
+++ b/home.html
@@ -218,6 +218,18 @@
 
 <body>
 	<div class="wrapper">
+    <div class="additional-video">
+      <div class="additional-video__body">
+        <button type="button" class="additional-video__close">
+          <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50" viewBox="0 0 50 50">
+            <path d="M 9.15625 6.3125 L 6.3125 9.15625 L 22.15625 25 L 6.21875 40.96875 L 9.03125 43.78125 L 25 27.84375 L 40.9375 43.78125 L 43.78125 40.9375 L 27.84375 25 L 43.6875 9.15625 L 40.84375 6.3125 L 25 22.15625 Z"></path>
+            </svg>
+        </button>
+        <video class="w-full" autoplay="" controls loop="" playsinline>
+          <source src="https://foodexhub.com.ua/assets/video/compress-2.mp4" type="video/mp4">
+        </video>
+      </div>
+    </div>
 		<header data-scroll="120" data-scroll-show class="header">
 			<div class="header__container">
 				<div class="header__content">
@@ -259,12 +271,12 @@
 
 									<ul>
 										<li>
-											<a href="#">
+											<a href="programs.html">
 												Всі
 											</a>
 										</li>
 										<li>
-											<a href="#">
+											<a href="program.html">
 												<i>
 													<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
 														<path d="M16.7062 12.8625C17.9625 11.6062 18.6562 9.93281 18.6562 8.15625C18.6562 6.37734 17.9648 4.70625 16.7062 3.45C15.45 2.19375 13.7766 1.5 12 1.5C10.2234 1.5 8.55 2.19141 7.29375 3.45C6.0375 4.70859 5.34375 6.37734 5.34375 8.15625C5.34375 9.65156 5.83359 11.0719 6.73594 12.232C6.90703 12.4523 7.09219 12.6609 7.29141 12.8625C7.49063 13.0617 7.70156 13.2469 7.91953 13.418C8.84766 14.1398 9.94219 14.5992 11.1094 14.7539V17.25H8.4375C8.33437 17.25 8.25 17.3344 8.25 17.4375V18.8438C8.25 18.9469 8.33437 19.0312 8.4375 19.0312H11.1094V22.3125C11.1094 22.4156 11.1937 22.5 11.2969 22.5H12.7031C12.8063 22.5 12.8906 22.4156 12.8906 22.3125V19.0312H15.5625C15.6656 19.0312 15.75 18.9469 15.75 18.8438V17.4375C15.75 17.3344 15.6656 17.25 15.5625 17.25H12.8906V14.7539C14.332 14.5617 15.6609 13.9078 16.7062 12.8625ZM12 13.0312C10.6969 13.0312 9.47578 12.525 8.55234 11.6039C7.63125 10.6828 7.125 9.45937 7.125 8.15625C7.125 6.85313 7.63125 5.63203 8.55234 4.70859C9.47344 3.78516 10.6969 3.28125 12 3.28125C13.3031 3.28125 14.5242 3.7875 15.4477 4.70859C16.3687 5.62969 16.875 6.85313 16.875 8.15625C16.875 9.45937 16.3687 10.6805 15.4477 11.6039C14.5242 12.525 13.3031 13.0312 12 13.0312Z" fill="#33CC99" />
@@ -1442,77 +1454,115 @@
 							<div class="reviews__tab">
 								<div class="reviews__slider swiper">
 									<div class="reviews__wrapper swiper-wrapper">
-										<div class="reviews__slide swiper-slide review" data-popup="#popupVideo" data-popup-youtube="s2gg5h2t0d4">
-											<div class="review__body">
-												<div class="review__preview  video-block video-block-md video-block-preview">
-													<img src="https://picsum.photos/seed/picsum/1920/800" alt="Image">
-												</div>
-												<div class="review__content">
-													<div class="subheading mb-1">
+										<div class="reviews__slide swiper-slide review-text">
+											<div class="review-text__body">
+                        <div class="review-text__avatar mb-4">
+                          <img src="img/blog/01.webp" alt="Image">
+                        </div>
+												<div class="review-text__content">
+													<div class="subheading mb-2">
 														Lorem ipsum dolor sit.
 													</div>
-													<div class="description">
+													<div class="description text-black/65">
 														Lorem ipsum dolor sit amet consectetur.
 													</div>
 												</div>
 											</div>
 										</div>
-										<div class="reviews__slide swiper-slide review" data-popup="#popupVideo" data-popup-youtube="s2gg5h2t0d4">
-											<div class="review__body">
-												<div class="review__preview  video-block video-block-md video-block-preview">
-													<img src="https://picsum.photos/id/200/700/300" alt="Image">
-												</div>
-												<div class="review__content">
-													<div class="subheading mb-1">
+                    <div class="reviews__slide swiper-slide review-text">
+											<div class="review-text__body">
+                        <div class="review-text__avatar mb-4">
+                          <img src="img/blog/01.webp" alt="Image">
+                        </div>
+												<div class="review-text__content">
+													<div class="subheading mb-2">
 														Lorem ipsum dolor sit.
 													</div>
-													<div class="description">
+													<div class="description text-black/65">
+														Lorem ipsum dolor sit amet consectetur.
+													</div>
+												</div>
+
+											</div>
+										</div>
+                    <div class="reviews__slide swiper-slide review-text">
+											<div class="review-text__body">
+                        <div class="review-text__avatar mb-4">
+                          <img src="img/blog/01.webp" alt="Image">
+                        </div>
+												<div class="review-text__content">
+													<div class="subheading mb-2">
+														Lorem ipsum dolor sit.
+													</div>
+													<div class="description text-black/65">
 														Lorem ipsum dolor sit amet consectetur.
 													</div>
 												</div>
 											</div>
 										</div>
-										<div class="reviews__slide swiper-slide review" data-popup="#popupVideo" data-popup-youtube="s2gg5h2t0d4">
-											<div class="review__body">
-												<div class="review__preview  video-block video-block-md video-block-preview">
-													<img src="https://picsum.photos/id/100/700/1100" alt="Image">
-												</div>
-												<div class="review__content">
-													<div class="subheading mb-1">
+                    <div class="reviews__slide swiper-slide review-text">
+											<div class="review-text__body">
+                        <div class="review-text__avatar mb-4">
+                          <img src="img/blog/01.webp" alt="Image">
+                        </div>
+												<div class="review-text__content">
+													<div class="subheading mb-2">
 														Lorem ipsum dolor sit.
 													</div>
-													<div class="description">
+													<div class="description text-black/65">
+														Lorem ipsum dolor sit amet consectetur.
+													</div>
+												</div>
+
+											</div>
+										</div>
+                    <div class="reviews__slide swiper-slide review-text">
+											<div class="review-text__body">
+                        <div class="review-text__avatar mb-4">
+                          <img src="img/blog/01.webp" alt="Image">
+                        </div>
+												<div class="review-text__content">
+													<div class="subheading mb-2">
+														Lorem ipsum dolor sit.
+													</div>
+													<div class="description text-black/65">
 														Lorem ipsum dolor sit amet consectetur.
 													</div>
 												</div>
 											</div>
 										</div>
-										<div class="reviews__slide swiper-slide review" data-popup="#popupVideo" data-popup-youtube="s2gg5h2t0d4">
-											<div class="review__body">
-												<div class="review__preview  video-block video-block-md video-block-preview">
-													<img src="https://picsum.photos/id/102/700/1100" alt="Image">
-												</div>
-												<div class="review__content">
-													<div class="subheading mb-1">
+                    <div class="reviews__slide swiper-slide review-text">
+											<div class="review-text__body">
+                        <div class="review-text__avatar mb-4">
+                          <img src="img/blog/01.webp" alt="Image">
+                        </div>
+												<div class="review-text__content">
+													<div class="subheading mb-2">
 														Lorem ipsum dolor sit.
 													</div>
-													<div class="description">
+													<div class="description text-black/65">
 														Lorem ipsum dolor sit amet consectetur.
 													</div>
 												</div>
+
 											</div>
 										</div>
-										<div class="reviews__slide swiper-slide review" data-popup="#popupVideo" data-popup-youtube="s2gg5h2t0d4">
-											<div class="review__body">
-												<div class="review__preview  video-block video-block-md video-block-preview">
-													<img src="https://picsum.photos/id/145/700/1100" alt="Image">
-												</div>
-												<div class="review__content">
-													<div class="subheading mb-1">
+                    <div class="reviews__slide swiper-slide review-text">
+											<div class="review-text__body">
+                        <div class="review-text__avatar mb-4">
+                          <img src="img/blog/01.webp" alt="Image">
+                        </div>
+												<div class="review-text__content">
+													<div class="subheading mb-2">
 														Lorem ipsum dolor sit.
+                            Lorem ipsum dolor sit.
+                            Lorem ipsum dolor sit.
 													</div>
-													<div class="description">
+													<div class="description text-black/65">
 														Lorem ipsum dolor sit amet consectetur.
+                            Lorem ipsum dolor sit amet consectetur.
+                            Lorem ipsum dolor sit amet consectetur.
+                            Lorem ipsum dolor sit amet consectetur.
 													</div>
 												</div>
 											</div>
@@ -2242,7 +2292,7 @@
 									<nav class="menu__body">
 										<ul>
 											<li>
-												<a href="#">
+												<a href="programs.html">
 													Програми харчування
 
 
@@ -2252,27 +2302,27 @@
 												</a>
 											</li>
 											<li>
-												<a href="#">
+												<a href="about-us.html">
 													Про нас
 												</a>
 											</li>
 											<li>
-												<a href="#">
+												<a href="promotions.html">
 													Акції
 												</a>
 											</li>
 											<li>
-												<a href="#">
+												<a href="delivery.html">
 													Доставка
 												</a>
 											</li>
 											<li>
-												<a href="#">
+												<a href="blog.html">
 													Блог
 												</a>
 											</li>
 											<li>
-												<a href="#">
+												<a href="franchise.html">
 													Франшизи
 												</a>
 											</li>
